Day1/3/k8s/app/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: wsc2026
---
apiVersion: v1
kind: Namespace
metadata:
  name: observability
