Day1/3/k8s/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wsc2026-book-svc
  namespace: wsc2026
  annotations:
    service.kubernetes.io/topology-mode: Auto
spec:
  type: ClusterIP
  selector:
    app: book
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
